tests/ui/no-repr.stderr
error: RefCast trait requires #[repr(C)] or #[repr(transparent)]
 --> $DIR/no-repr.rs:3:10
  |
3 | #[derive(RefCast)]
  |          ^^^^^^^
